--- a/src/research.njk
+++ b/src/research.njk
@@ -1,11 +1,13 @@
 ---
 layout: base.njk
-title: Research
+title: Research - Colin LeFevre
 navCategory: /research
 cssFile: ["project.css", "research.css", "buttons.css"]
 ---
 
-<div class="h1">Research</div>
+<h1>
+    <div class="h1">Research</div>
+</hi>
 
 {% import "macros/project.njk" as macros %}
 
