--- a/src/_includes/partials/nav-links.njk
+++ b/src/_includes/partials/nav-links.njk
@@ -8,14 +8,13 @@
     }
 ] %}
 
-{# , {
-        id: '/design',
-        title: 'Design'
-    } #}
-
-<div class="nav-links">
+<ul class="nav-links">
     {% for info in navInfo %}
-        <a href="{{ info.id | url}}" class="{{ 'active' if info.id == navCategory}}">{{info.title}}</a>
+        <li>
+            <a href="{{ info.id | url}}" class="{{ 'active' if info.id == navCategory }}" aria-current="{{ 'page' if info.id == navCategory else 'false'}}">{{info.title}}</a>
+        </li>
     {% endfor %}
-    <a href="{{ '/assets/pdfs/colinlefevre_cv.pdf'  | url }}" target="_blank" rel="noopener noreferrer">CV</a>
-</div>
+    <li>
+        <a href="{{ '/assets/pdfs/colinlefevre_cv.pdf'  | url }}" target="_blank" rel="noopener noreferrer">CV</a>
+    </li>
+</ul>
