--- a/src/_includes/partials/nav-links.njk
+++ b/src/_includes/partials/nav-links.njk
@@ -15,6 +15,6 @@
         </li>
     {% endfor %}
     <li>
-        <a href="{{ '/assets/pdfs/colinlefevre_cv.pdf'  | url }}" target="_blank" rel="noopener noreferrer">CV</a>
+        <a href="{{ '/assets/pdfs/colinlefevre_cv.pdf'  | url }}" target="_blank" rel="noopener noreferrer" aria-label="Curriculum Vitae, opens PDF in new tab">CV</a>
     </li>
 </ul>
