underlined focus + jquery to javascript

--- a/src/_includes/partials/basehead.njk
+++ b/src/_includes/partials/basehead.njk
@@ -21,5 +21,5 @@
 {% endfor %}
 
 {# JavaScript #}
-<script src="{{ '/js/jquery-3.3.1.js' | url }}" defer></script>
+{# <script src="{{ '/js/jquery-3.3.1.js' | url }}" defer></script> #}
 <script src="{{ '/js/navbar.js' | url }}" defer></script>
