--- a/src/_includes/partials/navbar.njk
+++ b/src/_includes/partials/navbar.njk
@@ -28,7 +28,7 @@
     {# Spacing for floating navbar #}
     <div id="mobile-nav-spacer"></div>
     {# Popout #}
-    <div id="popout" class="container hide">
+    <div id="popout" class="container hide" aria-modal="false">
         <div id="nav-mobile-x">
             {% include "svg/svg-nav-x.njk" %}
         </div>
