--- a/src/css/base.css
+++ b/src/css/base.css
@@ -76,7 +76,6 @@ a {
 
 a:hover {
     color: var(--link-hover-color);
-    text-decoration: underline;
 }
 
 /* BOOTSTRAP GRID HELPERS
@@ -220,4 +219,9 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: inherit;
     margin: 0;
     padding: 0;
+}
+
+/* Visually show focus */
+a:focus {
+    text-decoration: underline;
 }
