--- a/src/_includes/partials/basehead.njk
+++ b/src/_includes/partials/basehead.njk
@@ -22,4 +22,4 @@
 
 {# JavaScript #}
 {# <script src="{{ '/js/jquery-3.3.1.js' | url }}" defer></script> #}
-<script src="{{ '/js/navbar.js' | url }}" defer></script>
+<script src="{{ '/js/navbar.min.js' | url }}" defer></script>
