senior thesis paper update + pdf renaming

--- a/src/research.njk
+++ b/src/research.njk
@@ -15,10 +15,10 @@ cssFile: ["project.css", "research.css", "buttons.css"]
 {{ macros.project(
     header='Reflective Technology & Bereavement',
     subtitle='Spring 2022 - Present',
-    body=["In my undergraduate thesis, I examined how reflective technology can be designed to support bereaved individuals' grieving process. I specifically focused on meaning-making, an outcome of reflection documented in constructivist grief therapies. I was advised by <a href='http://cfchung.com/'>Christina Chung</a>.","A paper on this project was conditionally accepted to CHI '24, and is currently under final review."],
+    body=["In my undergraduate thesis, I examined how reflective technology can be designed to support bereaved individuals' grieving process. I specifically focused on meaning-making, an outcome of reflection documented in constructivist grief therapies. I was advised by <a href='http://cfchung.com/'>Christina Chung</a>."],
     img='research/bereavement.jpg',
     alt="video game controller",
-    buttons=[{label: "CHI '24 Paper", disabled: "true", link: ""},{label: "CHI '23 Poster", link: '/assets/pdfs/reflective_tech_bereavement_chi23.pdf'}]
+    buttons=[{label: "CHI '24 Paper", link: "/assets/pdfs/LeFevreChung_CHI24.pdf"},{label: "CHI '23 Poster", link: '/assets/pdfs/LeFevreChung_CHI23.pdf'}]
 )}}
 
 {# Cooking Stories #}
@@ -28,7 +28,7 @@ cssFile: ["project.css", "research.css", "buttons.css"]
     body=['In this project, I have contributed to the conceptualization, design, and development of a cultural probe focused on social support for healthy eating. Specifically, the probe investigates the digital sharing of cooking experiences between intergenerational, remote family members. This project is led by <a href="https://aswatipanicker.com/">Aswati Panicker</a> and <a href="http://cfchung.com">Christina Chung</a>.', "Currently, I am focusing on the development of the probe, as well as the design and implementation of an accompanying evaluation study."],
     img='research/cooking.jpg',
     alt="sandwich cut in half",
-    buttons=[{label: "ECSCW '22 Poster", link: '/assets/pdfs/digital_cooking_experiences_ecscw22.pdf'}]
+    buttons=[{label: "ECSCW '22 Poster", link: '/assets/pdfs/ModiEtAl_ECSCW22.pdf'}]
 )}}
 
 {# Abortion Activism #}
@@ -38,5 +38,5 @@ cssFile: ["project.css", "research.css", "buttons.css"]
     body=["In this student-led project, we investigated how technology could support pro-choice abortion activists in Indiana following the repeal of Roe v. Wade. We engaged in a three-stage, participatory design process, and designed and developed a prototype supportive system. We were advised by <a href='http://cfchung.com/'>Christina Chung</a> and <a href='https://wphomes.soic.indiana.edu/ksiek/'>Katie Siek</a>"],
     img='research/abortion.jpg',
     alt="stethoscope attached to phone",
-    buttons=[{label: "CSCW '23 Poster", link: '/assets/pdfs/abortion_activism_cscw23.pdf'}]
+    buttons=[{label: "CSCW '23 Poster", link: '/assets/pdfs/LeFevreEtAl_CSCW23.pdf'}]
 )}}
