--- a/src/index.njk
+++ b/src/index.njk
@@ -33,9 +33,9 @@ title: Colin LeFevre
 {# Description Text #}
 {% macro desc() %}
     <div class="desc">
-        <p>I am a Human-Computer Interaction (HCI) researcher at  <a href="https://prohealth.luddy.indiana.edu/">Proactive Health Informatics</a>. I recently graduated from Indiana University Bloomington with a B.S. in Informatics.</p>
-        <p>My research focuses on designing technologies which support health and wellbeing in everyday settings. At present, I am particularly interested in digital mental health and self-management. My undergraduate research was advised by <a href="http://cfchung.com">Christina Chung</a>.</p>
-        <p>Currently, I am wrapping up undergraduate research projects, awaiting Ph.D. application results, and generally relaxing.</p>
+        <p>I am a Human-Computer Interaction (HCI) researcher at  <a href="https://prohealth.luddy.indiana.edu/">Proactive Health Informatics</a>. I graduated from Indiana University with a B.S. in Informatics, and am an incoming Informatics Ph.D. student at the University of California, Irvine.</p>
+        <p>My research focuses on designing technologies which support health and wellbeing in everyday settings. At present, I am particularly interested in digital mental health and self-management. My undergraduate research advisor was <a href="http://cfchung.com">Christina Chung</a>, and my prospective Ph.D. research advisor is <a href="https://www.informatics.uci.edu/explore/faculty-profiles/madhu-reddy/">Madhu Reddy</a>.</p>
+        <p>Currently, I am wrapping up undergraduate research projects, preparing to travel to CHI 2024, and generally relaxing.</p>
     </div>
 {% endmacro %}
 
