--- a/src/research.njk
+++ b/src/research.njk
@@ -14,7 +14,7 @@ cssFile: ["project.css", "research.css", "buttons.css"]
 {# Cooking Stories #}
 {{ macros.project(
     header="Digitally Shared Cooking Experiences",
-    subtitle='Summer 2021 - Present',
+    subtitle='2021 - Present',
     body=['In this project, I have contributed to the conceptualization, design, and development of a cultural probe focused on social support for healthy eating. Specifically, the probe investigates the digital sharing of cooking experiences between intergenerational, remote family members. This project is led by <a href="https://aswatipanicker.com/">Aswati Panicker</a> and <a href="http://cfchung.com">Christina Chung</a>.', "Currently, I am focusing on the development of the probe, as well as the design and implementation of an accompanying evaluation study."],
     img='research/cooking.jpg',
     alt="sandwich cut in half",
@@ -24,7 +24,7 @@ cssFile: ["project.css", "research.css", "buttons.css"]
 {# Reflection and Bereavement #}
 {{ macros.project(
     header='Reflective Technology & Bereavement',
-    subtitle='Spring 2022 - Spring 2024',
+    subtitle='2022 - 2024',
     body=["In my undergraduate thesis, I examined how reflective technology can be designed to support bereaved individuals' grieving process. I specifically focused on meaning-making, an outcome of reflection documented in constructivist grief therapies. I was advised by <a href='http://cfchung.com/'>Christina Chung</a>."],
     img='research/bereavement.jpg',
     alt="video game controller",
@@ -34,7 +34,7 @@ cssFile: ["project.css", "research.css", "buttons.css"]
 {# Abortion Activism #}
 {{ macros.project(
     header="Technology & Abortion Activism",
-    subtitle='Sep 2022 - Dec 2023',
+    subtitle='2022 - 2023',
     body=["In this student-led project, we investigated how technology could support pro-choice abortion activists in Indiana following the repeal of Roe v. Wade. We engaged in a three-stage, participatory design process, and designed and developed a prototype supportive system. We were advised by <a href='http://cfchung.com/'>Christina Chung</a> and <a href='https://wphomes.soic.indiana.edu/ksiek/'>Katie Siek</a>"],
     img='research/abortion.jpg',
     alt="stethoscope attached to phone",
