Firefox image cropping fix

--- a/src/_includes/macros/project.njk
+++ b/src/_includes/macros/project.njk
@@ -11,7 +11,7 @@
         {# Desktop Layout #}
         <div class="row desktop">
             <div class="col-lg-4">
-                <img loading="lazy" src="{{ '/assets/images/' + img | url }}" class="img-fluid crop-3x2" alt="{{alt}}">
+                <img loading="lazy" src="{{ '/assets/images/' + img + '3x2.jpg' | url }}" class="img-fluid" alt="{{alt}}">
             </div>
             <div class="col-lg-7 offset-1">
                 <h2>
@@ -28,7 +28,7 @@
         {# Tablet Layout #}
         <div class="row tablet">
             <div class="col-sm-4">
-                <img loading="lazy" src="{{ '/assets/images/' + img | url }}" class="img-fluid crop-3x2" alt="{{alt}}">
+                <img loading="lazy" src="{{ '/assets/images/' + img + '3x2.jpg' | url }}" class="img-fluid" alt="{{alt}}">
             </div>
             <div class="col-sm-7 offset-1">
                 <div class="vertical-center">
@@ -47,7 +47,7 @@
         {# Mobile Layout #}
         <div class="row mobile">
             <div class="col-12">
-                <img loading="lazy" src="{{ '/assets/images/' + img | url }}" class="img-fluid crop-16x9" alt="{{alt}}">
+                <img loading="lazy" src="{{ '/assets/images/' + img + '16x9.jpg' | url }}" class="img-fluid" alt="{{alt}}">
             </div>
             <div class="col-12">
                 <div class="h2">{{header}}</div>
