--- a/src/index.njk
+++ b/src/index.njk
@@ -42,7 +42,7 @@ title: Colin LeFevre
 {# Desktop Layout #}
 <div class="row desktop">
     <div class="col-lg-4">
-        <img src="{{ 'assets/images/headshot.jpg' | url }}" class="img-fluid crop-2x3" alt="Colin LeFevre standing in a forest on a sunny day">
+        <img src="{{ 'assets/images/headshot/2x3.jpg' | url }}" class="img-fluid" alt="Colin LeFevre standing in a forest on a sunny day">
     </div>
     <div class="col-lg-7 offset-1">
         {{ intro() }}
@@ -54,7 +54,7 @@ title: Colin LeFevre
 {# Tablet Layout #}
 <div class="row tablet">
     <div class="col-sm-5">
-        <img src="{{ 'assets/images/headshot.jpg' | url }}" class="img-fluid crop-1x1" alt="Colin LeFevre standing in a forest on a sunny day">
+        <img src="{{ 'assets/images/headshot/1x1.jpg' | url }}" class="img-fluid" alt="Colin LeFevre standing in a forest on a sunny day">
     </div>
     <div class="col-sm-6 offset-1">
         <div class="vertical-center">
@@ -70,7 +70,7 @@ title: Colin LeFevre
 {# Mobile Layout #}
 <div class="row mobile">
     <div class="col-12">
-        <img src="{{ 'assets/images/headshot.jpg' | url }}" class="img-fluid crop-16x9" alt="Colin LeFevre standing in a forest on a sunny day">
+        <img src="{{ 'assets/images/headshot/16x9.jpg' | url }}" class="img-fluid" alt="Colin LeFevre standing in a forest on a sunny day">
     </div>
     <div class="col-12">
         {{ intro() }}
