--- a/src/research.njk
+++ b/src/research.njk
@@ -16,7 +16,7 @@ cssFile: ["project.css", "research.css", "buttons.css"]
     header="Digitally Shared Cooking Experiences",
     subtitle='2021 - Present',
     body=['In this project, I have contributed to the conceptualization, design, and development of a cultural probe focused on social support for healthy eating. Specifically, the probe investigates the digital sharing of cooking experiences between intergenerational, remote family members. This project is led by <a href="https://aswatipanicker.com/">Aswati Panicker</a> and <a href="http://cfchung.com">Christina Chung</a>.', "Currently, I am focusing on the development of the probe, as well as the design and implementation of an accompanying evaluation study."],
-    img='research/cooking.jpg',
+    img='research/cooking/',
     alt="sandwich cut in half",
     buttons=[{label: "ECSCW '22 Poster", link: '/assets/pdfs/ModiEtAl_ECSCW22.pdf'}]
 )}}
@@ -26,7 +26,7 @@ cssFile: ["project.css", "research.css", "buttons.css"]
     header='Reflective Technology & Bereavement',
     subtitle='2022 - 2024',
     body=["In my undergraduate thesis, I examined how reflective technology can be designed to support bereaved individuals' grieving process. I specifically focused on meaning-making, an outcome of reflection documented in constructivist grief therapies. I was advised by <a href='http://cfchung.com/'>Christina Chung</a>."],
-    img='research/bereavement.jpg',
+    img='research/bereavement/',
     alt="video game controller",
     buttons=[{label: "CHI '24 Paper", link: "/assets/pdfs/LeFevreChung_CHI24.pdf"},{label: "CHI '23 Poster", link: '/assets/pdfs/LeFevreChung_CHI23.pdf'}]
 )}}
@@ -36,7 +36,7 @@ cssFile: ["project.css", "research.css", "buttons.css"]
     header="Technology & Abortion Activism",
     subtitle='2022 - 2023',
     body=["In this student-led project, we investigated how technology could support pro-choice abortion activists in Indiana following the repeal of Roe v. Wade. We engaged in a three-stage, participatory design process, and designed and developed a prototype supportive system. We were advised by <a href='http://cfchung.com/'>Christina Chung</a> and <a href='https://wphomes.soic.indiana.edu/ksiek/'>Katie Siek</a>"],
-    img='research/abortion.jpg',
+    img='research/abortion/',
     alt="stethoscope attached to phone",
     buttons=[{label: "CSCW '23 Poster", link: '/assets/pdfs/LeFevreEtAl_CSCW23.pdf'}]
 )}}
