--- a/src/index.njk
+++ b/src/index.njk
@@ -33,48 +33,50 @@ title: Colin LeFevre
 {# Description Text #}
 {% macro desc() %}
     <div class="desc">
-        <p>I am a Human-Computer Interaction (HCI) researcher at  <a href="https://prohealth.luddy.indiana.edu/">Proactive Health Informatics</a>. I am an incoming Informatics Ph.D. student and NSF Graduate Research Fellow</a> at the University of California, Irvine.</p>
-    <p>My research focuses on designing technologies which support health and wellbeing in everyday settings. At present, I am particularly interested in digital mental health and self-management. My undergraduate research advisor was <a href="http://cfchung.com">Christina Chung</a>, and my Ph.D. advisor will be <a href="https://www.informatics.uci.edu/explore/faculty-profiles/madhu-reddy/">Madhu Reddy</a>.</p>
-    <p>Currently, I am settling into California, wrapping up some undergraduate projects, and preparing to begin my Ph.D.</p>
-</div>
+        <p>I am a Human-Computer Interaction (HCI) researcher, and an incoming Informatics Ph.D. student at the University of California, Irvine. Previously, I was a researcher at the <a href="https://prohealth.luddy.indiana.edu/">Proactive Health Informatics</a> research group, and earned in a B.S. in Informatics from Indiana University.</p>
+
+        <p>I study how technologies can be designed to support health and wellbeing in everyday settings. At present, I am particularly interested in digital mental health and self-management. My B.S. research advisor was <a href="http://cfchung.com">Christina Chung</a>, and my Ph.D. research advisor will be <a href="https://www.informatics.uci.edu/explore/faculty-profiles/madhu-reddy/">Madhu Reddy</a>.</p>
+
+        <p>Currently, I am settling into California, wrapping up some undergraduate projects, and preparing to begin my Ph.D.</p>
+    </div>
 {% endmacro %}
 
 {# Desktop Layout #}
 <div class="row desktop">
-<div class="col-lg-4">
-    <img src="{{ 'assets/images/headshot/2x3.jpg' | url }}" class="img-fluid" alt="Colin LeFevre standing in a forest on a sunny day">
-</div>
-<div class="col-lg-7 offset-1">
-    {{ intro() }}
-    {{ links() }}
-    {{ desc() }}
-</div>
+    <div class="col-lg-4">
+        <img src="{{ 'assets/images/headshot/2x3.jpg' | url }}" class="img-fluid" alt="Colin LeFevre standing in a forest on a sunny day">
+    </div>
+    <div class="col-lg-7 offset-1">
+        {{ intro() }}
+        {{ links() }}
+        {{ desc() }}
+    </div>
 </div>
 
 {# Tablet Layout #}
 <div class="row tablet">
-<div class="col-sm-5">
-    <img src="{{ 'assets/images/headshot/1x1.jpg' | url }}" class="img-fluid" alt="Colin LeFevre standing in a forest on a sunny day">
-</div>
-<div class="col-sm-6 offset-1">
-    <div class="vertical-center">
-        {{ intro() }}
-        {{ links() }}
+    <div class="col-sm-5">
+        <img src="{{ 'assets/images/headshot/1x1.jpg' | url }}" class="img-fluid" alt="Colin LeFevre standing in a forest on a sunny day">
     </div>
-</div>
-<div class="col-sm-12">
-    {{ desc() }}
-</div>
+    <div class="col-sm-6 offset-1">
+        <div class="vertical-center">
+            {{ intro() }}
+            {{ links() }}
+        </div>
+    </div>
+    <div class="col-sm-12">
+        {{ desc() }}
+    </div>
 </div>
 
 {# Mobile Layout #}
 <div class="row mobile">
-<div class="col-12">
-    <img src="{{ 'assets/images/headshot/16x9.jpg' | url }}" class="img-fluid" alt="Colin LeFevre standing in a forest on a sunny day">
-</div>
-<div class="col-12">
-    {{ intro() }}
-    {{ links() }}
-    {{ desc() }}
-</div>
+    <div class="col-12">
+        <img src="{{ 'assets/images/headshot/16x9.jpg' | url }}" class="img-fluid" alt="Colin LeFevre standing in a forest on a sunny day">
+    </div>
+    <div class="col-12">
+        {{ intro() }}
+        {{ links() }}
+        {{ desc() }}
+    </div>
 </div>
