--- a/src/index.njk
+++ b/src/index.njk
@@ -33,11 +33,11 @@ title: Colin LeFevre
 {# Description Text #}
 {% macro desc() %}
     <div class="desc">
-        <p>I am a Human-Computer Interaction (HCI) researcher, and an incoming Informatics Ph.D. student at the University of California, Irvine. Previously, I was a researcher at the <a href="https://prohealth.luddy.indiana.edu/">Proactive Health Informatics</a> research group, and earned in a B.S. in Informatics from Indiana University.</p>
+        <p>I am a Human-Computer Interaction (HCI) researcher and an Informatics Ph.D. student at the University of California, Irvine. Previously, I was a researcher at the <a href="https://prohealth.luddy.indiana.edu/">Proactive Health Informatics</a> research group, and earned in a B.S. in Informatics from Indiana University.</p>
 
-        <p>I study how technologies can be designed to support health and wellbeing in everyday settings. At present, I am particularly interested in digital mental health and self-management. My B.S. research advisor was <a href="http://cfchung.com">Christina Chung</a>, and my Ph.D. research advisor will be <a href="https://www.informatics.uci.edu/explore/faculty-profiles/madhu-reddy/">Madhu Reddy</a>.</p>
+        <p>I study how technologies can be designed to support health and wellbeing in everyday settings. At present, I am particularly interested in digital mental health and self-management. My B.S. research advisor was <a href="http://cfchung.com">Christina Chung</a>, and my Ph.D. research advisor is <a href="https://www.informatics.uci.edu/explore/faculty-profiles/madhu-reddy/">Madhu Reddy</a>.</p>
 
-        <p>Currently, I am settling into California, wrapping up some undergraduate projects, and preparing to begin my Ph.D.</p>
+        <p>Currently, I'm settling into my Ph.D., starting work on my Ph.D. research, and acclimating to southern California's excessive sunshine.</p>
     </div>
 {% endmacro %}
 
