tense in cooking stories

--- a/src/research.njk
+++ b/src/research.njk
@@ -25,7 +25,7 @@ cssFile: ["project.css", "research.css", "buttons.css"]
 {{ macros.project(
     header="Digitally Shared Cooking Experiences",
     subtitle='2021 - 2024',
-    body=['In this project, I have contributed to the conceptualization, design, and development of a cultural probe focused on social support for healthy eating. Specifically, the probe investigates the digital sharing of cooking experiences between intergenerational, remote family members. This project is led by <a href="https://aswatipanicker.com/">Aswati Panicker</a> and <a href="http://cfchung.com">Christina Chung</a>.'],
+    body=['In this project, I have contributed to the conceptualization, design, and development of a cultural probe focused on social support for healthy eating. Specifically, the probe investigates the digital sharing of cooking experiences between intergenerational, remote family members. This project was led by <a href="https://aswatipanicker.com/">Aswati Panicker</a> and <a href="http://cfchung.com">Christina Chung</a>.'],
     img='research/cooking/',
     alt="sandwich cut in half",
     buttons=[{label: "ECSCW '22 Poster", link: '/assets/pdfs/ModiEtAl_ECSCW22.pdf'}]
